*  changes to this system (first command at top, last at bottom)             *
******************************************************************************

2008-09-01 - dkg
	* set up http://dkg.monkeysphere.info so that i could play around
	  with ikiwiki updates
	* moved apt repository over to http://archive.monkeysphere.info/
	* aptitude update && aptitude dist-upgrade
	
2008-08-26 - dkg
	* aptitude update && aptitude full-upgrade
	* added account 'daniel' for Dan Scott, and set him up with a way
	  to publish to http://daniel.monkeysphere.info
	
2008-08-20 - dkg
	* aptitude update && aptitude dist-upgrade: this includes
	  monkeysphere 0.11-1 and OpenSSH 5.1p1-2
	
2008-08-18 - dkg
	* moved monkeysphere apt repo entry to
	  /etc/apt/sources.list.d/monkeysphere.list
	* aptitude update && aptitude full-upgrade (including monkeysphere
	  0.9-1)
	* switched george's monkeysphere-server preferred keyserver to
	  monkeysphere.info for the moment.  Both pgp.mit.edu and
	  subkeys.pgp.net are sluggish right now :/
	
2008-08-16 - jrollins
	* removed stale branches from jrollins from the master repo
	* aptitude update && aptitude full-upgrade
	* restarted services to clear up dependencies on old libraries
	
2008-08-13 - dkg
	* aptitude update && aptitude full-upgrade
	* restarted services to clear up dependencies on old libraries
	
2008-08-07 - dkg
	* aptitude update && aptitude dist-upgrade
	* removed debian's experimental from the sources.list
	* removed experimental stanza from /etc/apt/preferences (now the
	  monkeysphere packages should upgrade automatically)
	* upgraded to monkeysphere 0.7-1
	* installed runit
	* set up a public git daemon service to serve git repos from
	  george, using runit. (root-served repos are served from
	  /srv/git, but ~USER/public_git is supported as well, if anyone
	  wants to use that for publication).
	
2008-08-03 - dkg
	* aptitude update && aptitude dist-upgrade
	* installed iproute