@@ -30,8 +30,8 @@ key) across a group of machines by disabling authentication for that
 user?</p>
 
 <p>A group of us have been working on a public key infrastructure for
-SSH. <a href="http://monkeysphere.info">Monkeysphere</a> makes use of
-the existing OpenPGP web-of-trust to fetch and cryptographically
+SSH. <a href="http://web.monkeysphere.info">Monkeysphere</a> makes use
+of the existing OpenPGP web-of-trust to fetch and cryptographically
 validate (and revoke!) keys.  This works in either directions: both
 <code>authorized_keys</code> <em>and</em> <code>known_hosts</code> are
 handled.  Monkeysphere gives users and admins tools to deal with SSH
@@ -39,14 +39,17 @@ keys by thinking about the people and machines to whom the keys
 belong, instead of requiring humans to do tedious (and error-prone)
 manual key verification.</p>
 
-<p>We have <a href="http://monkeysphere.info/download">debian packages
+<p>We have <a href="http://web.monkeysphere.info/download">debian packages
 available</a> which should install against lenny, <a
 href="https://lists.riseup.net/www/info/monkeysphere">a mailing
 list</a>, and open ears for good questions, suggestions and
 criticism.</p>
 
-<p>If you have a chance to give it a try (<a href="???">as a user</a>
-or <a href="???">as an admin</a>), it would be great to <a
+<p>If you have a chance to give it a try (<a
+href="http://web.monkeysphere.info/getting-started-user/">as a
+user</a> or <a
+href="http://web.monkeysphere.info/getting-started-admin/">as an
+admin</a>), it would be great to <a
 href="https://lists.riseup.net/www/info/monkeysphere">get
 feedback</a>.</p>
 
